--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyCIa0poRFvt_1iu-_sB_sPbSZGAry3_0nw",
+            apiKey: 
             authDomain: "inventory-management-app-de0dd.firebaseapp.com",
             projectId: "inventory-management-app-de0dd",
             storageBucket: "inventory-management-app-de0dd.firebasestorage.app",
